--- a/public_html/sites/all/themes/custom/site/src/styles/theme/components/_loader.scss
+++ b/public_html/sites/all/themes/custom/site/src/styles/theme/components/_loader.scss
@@ -1,16 +1,12 @@
 @import "sectioned/loader";
 @import "boxy/loader";
-@import "partial/loader";
+@import "webform-components/loader";
 
 @import "flexy-header";
 @import "flexy-navigation";
 @import "layout";
-@import "sidr";
-@import "slinky-menu";
 @import "footer";
-@import "breadcrumb";
 @import "alert";
-@import "views";
 
 @import "menu";
 @import "forms";
