--- a/public_html/sites/all/themes/custom/site/src/styles/variables/_additional-bootstrap-colors.scss
+++ b/public_html/sites/all/themes/custom/site/src/styles/variables/_additional-bootstrap-colors.scss
@@ -1,5 +1,5 @@
 // Body colors
-$body-bg-secondary: #f3f3f3;
+$body-bg-secondary: #fff;
 $body-bg-tertiary: #f1f1f1;
 $body-bg-quaternary: #ccc;
 
@@ -35,7 +35,7 @@ $panel-secondary-border: $brand-secondary !default;
 $panel-secondary-heading-bg: $brand-secondary !default;
 
 // Tertiary
-$brand-tertiary: #f06477;
+$brand-tertiary: #7F9DCD;
 
 $btn-tertiary-color: #fff !default;
 $btn-tertiary-bg: $brand-tertiary !default;
