--- a/public_html/sites/all/themes/custom/site/src/styles/theme/components/_flexy-navigation.scss
+++ b/public_html/sites/all/themes/custom/site/src/styles/theme/components/_flexy-navigation.scss
@@ -24,6 +24,11 @@
 
 .flexy-navigation__item {
 
+  a {
+    font-weight: $font-weight-bold;
+    text-decoration: underline;
+  }
+
   &.active,
   &.active-trail {
 
@@ -72,7 +77,15 @@
 @media #{$breakpoint-tablet-only} {}
 
 // Desktop - and up
-@media #{$breakpoint-desktop-and-up} {}
+@media #{$breakpoint-desktop-and-up} {
+
+  .flexy-navigation__item {
+
+    a {
+      padding-top: 50px;
+    }
+  }
+}
 
 // Desktop - only
 @media #{$breakpoint-desktop-only} {}
