--- a/public_html/sites/all/themes/custom/site/src/styles/variables/_bootstrap.scss
+++ b/public_html/sites/all/themes/custom/site/src/styles/variables/_bootstrap.scss
@@ -15,11 +15,11 @@ $gray:                   lighten($gray-base, 33.5%) !default; // #555
 $gray-light:             lighten($gray-base, 46.7%) !default; // #777
 $gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
 
-$brand-primary:         #007ca3;
+$brand-primary:         #68A386;
 $brand-success:         #19b453 !default;
 $brand-info:            #5bc0de !default;
 $brand-warning:         #f0ad4e !default;
-$brand-danger:          #d9534f !default;
+$brand-danger:          #FF5252 !default;
 
 
 //== Scaffolding
@@ -27,14 +27,14 @@ $brand-danger:          #d9534f !default;
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-$body-bg:               #fff;
+$body-bg:               #E0E0E0;
 //** Global text color on `<body>`.
-$text-color:            #333;
+$text-color:            #474747;
 
 //** Global textual link color.
-$link-color:            $brand-primary !default;
+$link-color:            #7F9DCD;
 //** Link hover color set via `darken()` function.
-$link-hover-color:      $brand-primary;
+$link-hover-color:      $link-color;
 //** Link hover decoration.
 $link-hover-decoration: underline !default;
 
@@ -43,15 +43,15 @@ $link-hover-decoration: underline !default;
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif:  Raleway, "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$font-family-sans-serif:  Verdana, "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $font-family-serif:       Georgia, "Times New Roman", Times, serif !default;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
 $font-family-base:        $font-family-sans-serif !default;
 
-$font-size-base:          16px;
-$font-size-large:         18px;
-$font-size-small:         14px;
+$font-size-base:          12px;
+$font-size-large:         14px;
+$font-size-small:         11px;
 
 $font-size-h1:            32px;
 $font-size-h2:            28px;
@@ -67,9 +67,9 @@ $line-height-computed:    floor(($font-size-base * $line-height-base)) !default;
 
 //** By default, this inherits from the `<body>`.
 $headings-font-family:    inherit !default;
-$headings-font-weight:    400;
+$headings-font-weight:    700;
 $headings-line-height:    1.1 !default;
-$headings-color:          #111;
+$headings-color:          $text-color;
 
 
 //== Iconography
@@ -114,7 +114,7 @@ $border-radius-small:       3px;
 //** Global color for active items (e.g., navs or dropdowns).
 $component-active-color:    #fff !default;
 //** Global background color for active items (e.g., navs or dropdowns).
-$component-active-bg:       $brand-primary !default;
+$component-active-bg:       #7F9DCD;
 
 //** Width of the `border` for generating carets that indicate dropdowns.
 $caret-width-base:          4px !default;
@@ -127,14 +127,14 @@ $caret-width-large:         5px !default;
 //## Customizes the `.table` component with basic values, each used across all table variations.
 
 //** Padding for `<th>`s and `<td>`s.
-$table-cell-padding:            10px 8px;
+$table-cell-padding:            3px 6px;
 //** Padding for cells in `.table-condensed`.
 $table-condensed-cell-padding:  5px !default;
 
 //** Default background color used for all tables.
 $table-bg:                      transparent !default;
 //** Background color used for `.table-striped`.
-$table-bg-accent:               #f6f6f6;
+$table-bg-accent:               $body-bg;
 //** Background color used for `.table-hover`.
 $table-bg-hover:                #f6f6f6;
 $table-bg-active:               $table-bg-hover !default;
@@ -147,14 +147,14 @@ $table-border-color:            #eaeaea;
 //
 //## For each of Bootstrap's buttons, define text, background and border color.
 
-$btn-font-weight:                700;
+$btn-font-weight:                400;
 
-$btn-default-color:              $text-color;
-$btn-default-bg:                 #d7d7d7;
+$btn-default-color:              #fff;
+$btn-default-bg:                 #474747;
 $btn-default-border:             #ccc !default;
 
 $btn-primary-color:              #fff !default;
-$btn-primary-bg:                 $brand-primary !default;
+$btn-primary-bg:                 #927DA6;
 $btn-primary-border:             transparent;
 
 $btn-success-color:              #fff !default;
@@ -186,14 +186,14 @@ $btn-border-radius-small:        $border-radius-small !default;
 //##
 
 //** `<input>` background color
-$input-bg:                       $body-bg;
+$input-bg:                       #fff;
 //** `<input disabled>` background color
 $input-bg-disabled:              $gray-lighter !default;
 
 //** Text color for `<input>`s
 $input-color:                    $text-color;
 //** `<input>` border color
-$input-border:                   #dbdbdb;
+$input-border:                   #888;
 
 // TODO: Rename `$input-border-radius` to `$input-border-radius-base` in v4
 //** Default `.form-control` border radius
@@ -205,10 +205,10 @@ $input-border-radius-large:      $border-radius-large !default;
 $input-border-radius-small:      $border-radius-small !default;
 
 //** Border color for inputs on focus
-$input-border-focus:             darken($input-border, 10%);
+$input-border-focus:             #000;
 
 //** Placeholder text color
-$input-color-placeholder:        $text-color;
+$input-color-placeholder:        #888;
 
 //** Default `.form-control` height
 $input-height-base:              ($line-height-computed + ($padding-base-vertical * 2) + 2) !default;
@@ -224,7 +224,7 @@ $legend-color:                   $gray-dark !default;
 $legend-border-color:            #e5e5e5 !default;
 
 //** Background color for textual input addons
-$input-group-addon-bg:           $gray-lighter !default;
+$input-group-addon-bg:           #fff;
 //** Border color for textual input addons
 $input-group-addon-border-color: $input-border !default;
 
@@ -239,18 +239,18 @@ $cursor-disabled:                not-allowed !default;
 //** Background for the dropdown menu.
 $dropdown-bg:                    #fff !default;
 //** Dropdown menu `border-color`.
-$dropdown-border:                rgba(0,0,0,.15) !default;
+$dropdown-border:                $input-border;
 //** Dropdown menu `border-color` **for IE8**.
 $dropdown-fallback-border:       #ccc !default;
 //** Divider color for between dropdown items.
 $dropdown-divider-bg:            #e5e5e5 !default;
 
 //** Dropdown link text color.
-$dropdown-link-color:            $gray-dark !default;
+$dropdown-link-color:            #888;
 //** Hover color for dropdown links.
-$dropdown-link-hover-color:      darken($gray-dark, 5%) !default;
+$dropdown-link-hover-color:      #000;
 //** Hover background for dropdown links.
-$dropdown-link-hover-bg:         #f5f5f5 !default;
+$dropdown-link-hover-bg:         #979797 !default;
 
 //** Active dropdown menu item text color.
 $dropdown-link-active-color:     $component-active-color !default;
@@ -311,7 +311,7 @@ $screen-desktop:             $screen-md-min !default;
 
 // Large screen / wide desktop
 //** Deprecated `$screen-lg` as of v3.0.1
-$screen-lg:                  1200px !default;
+$screen-lg:                  992px !default;
 $screen-lg-min:              $screen-lg !default;
 //** Deprecated `$screen-lg-desktop` as of v3.0.1
 $screen-lg-desktop:          $screen-lg-min !default;
@@ -352,7 +352,7 @@ $container-desktop:            (940px + $grid-gutter-width) !default;
 $container-md:                 $container-desktop !default;
 
 // Large screen / wide desktop
-$container-large-desktop:      (1140px + $grid-gutter-width) !default;
+$container-large-desktop:      (940px + $grid-gutter-width) !default;
 //** For `$screen-lg-min` and up.
 $container-lg:                 $container-large-desktop !default;
 
@@ -513,7 +513,7 @@ $state-warning-text:             #8f872e;
 $state-warning-bg:               #fbfadd;
 $state-warning-border:           darken(adjust-hue($state-warning-bg, -10), 5%) !default;
 
-$state-danger-text:              #de5959;
+$state-danger-text:              #FF5252;
 $state-danger-bg:                #ffe9e9;
 $state-danger-border:            darken(adjust-hue($state-danger-bg, -10), 5%) !default;
 
@@ -709,7 +709,7 @@ $list-group-link-heading-color: #333 !default;
 
 $panel-bg:                    #fff !default;
 $panel-body-padding:          20px !default;
-$panel-heading-padding:       15px 20px;
+$panel-heading-padding:       5px 10px;
 $panel-footer-padding:        $panel-heading-padding !default;
 $panel-border-radius:         $border-radius-base !default;
 
@@ -717,9 +717,9 @@ $panel-border-radius:         $border-radius-base !default;
 $panel-inner-border:          #ddd !default;
 $panel-footer-bg:             #f5f5f5 !default;
 
-$panel-default-text:          $gray-dark !default;
+$panel-default-text:          $text-color;
 $panel-default-border:        #eaeaea;
-$panel-default-heading-bg:    #fcfcfc;
+$panel-default-heading-bg:    $body-bg;
 
 $panel-primary-text:          #fff !default;
 $panel-primary-border:        $brand-primary !default;
