--- a/public_html/sites/all/themes/custom/site/src/styles/theme/components/webform-components/_progressbar.scss
+++ b/public_html/sites/all/themes/custom/site/src/styles/theme/components/webform-components/_progressbar.scss
@@ -66,6 +66,7 @@
   &.clickable {}
 
   .webform-progressbar-page-label {
+    display: inline-block;
     top: 30px;
 
     font-weight: $font-weight-bold;
